# Voice2Voice

./: .dockerignore  .env copy  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  server.py
src/app/api/: dependencies.py  lifespan.py
src/app/config/: database.py  engine.py  settings.py
src/app/database/: actions.py  connection.py
src/app/engine/: speech_to_text.py  text_to_speech.py
src/app/services/: agent.py  factories.py  tools.py  utils.py
